src/snapshots/afrotd__parser__tests__rule_3.3.10.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 10
title: Verlust des Helmes – Timeout
text: "\ta) Verliert ein Spieler durch die Teilnahme an einem Down seinen Helm vollständig, außer als direkte Folge eines Fouls durch einen Gegner, muss der betreffende Spieler das Spiel für den nächsten Down verlassen. Die Game Clock stoppt am Ende des Downs. Der Spieler kann im Spiel bleiben, wenn sein Team eines seiner verbleibenden TeamTimeouts verbraucht.\n\tb) Ist der Helmverlust der einzige Grund zum Anhalten der Game Clock, ausgenommen der Verletzung des Helm verlierenden Spielers oder eines seiner Mitspieler (Regel 3.3.6), treffen die folgenden Bedingungen zu (A.R. 3.3.10.I bis 3.3.10.III):\n\t\t1. Außer nach einem Team-Timeout oder wenn die Game Clock für das Zwei-Minuten-Timeout angehalten wurde, wird die Play Clock auf 25 Sekunden gesetzt, wenn ein Offense Spieler seinen Helm verliert und auf 40 Sekunden, wenn es sich um einen Defense Spieler handelt. Vor dem Zwei-Minuten-Timeout in der zweiten oder der vierten Spielperiode startet die Game Clock mit dem Signal des Referees.\n\t\t2. 10-Sekunden-Abzug von der Game Clock: Nach dem ZweiMinuten-Timeout in der zweiten oder vierten Spielperiode hat das gegnerische Team die Möglichkeit eines 10-Sekunden-Abzugs, es sei denn, der Helmverlust ist die direkte Folge eines Fouls durch einen Gegner.\n\t\t3. Wird der 10-Sekunden-Abzug durchgeführt, startet die Game Clock mit dem Signal des Referees. Wird kein 10-Sekunden-Abzug durchgeführt, startet die Game Clock mit dem Snap.\n\t\t4. Der 10-Sekunden-Abzug kann vermieden werden, wenn das betreffende Team ein noch vorhandenes Team-Timeout nutzt.\n\t\t5. Es gibt keine Möglichkeit eines 10-Sekunden-Abzugs, wenn Spieler beider Teams ihren Helm vollständig verlieren (A.R. 3.3.10.V).\n\tc) Verliert der Ballträger seinen Helm durch die Teilnahme am Down vollständig, wird der Ball dead (Regel 4.1.3.q). Ist der betreffende Spieler kein Ballträger, bleibt der Ball live, aber der betreffende Spieler darf sich, außer an der mit dem Helmverlust verbundenen Aktion, nicht mehr am weiteren Spielgeschehen beteiligen. Weiterführende aktive Teilnahme ist ein persönliches Foul (Regel 9.1.17). Dieser Spieler ist gemäß der Definition ein Spieler, der sich nicht mehr am Spielgeschehen beteiligt (Regel 9.1.12.b).\n\td) Ein Spieler, der absichtlich seinen Helm abnimmt, während der Ball live ist, begeht ein Foul für unsportliches Verhalten (Regel 9.2.1.a.1.h)."
interpretations: []
