src/snapshots/afrotd__parser__tests__rule_3.3.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 2
title: Starten und Anhalten der Game Clock
text: "\ta) Free Kick. Nach einem Free Kick muss die Game Clock durch das Signal eines Schiedsrichters gestartet werden, sobald der Ball im Spielfeld legal berührt wird oder er die Goalline ins Spielfeld hinein überquert, nachdem er von Team B legal in dessen Endzone berührt wurde. Sie wird anschließend durch das Signal eines Schiedsrichters angehalten, wenn der Ball durch die Regel dead wird (A.R. 3.3.2.VII).\n\tb) Scrimmage Down. Wenn die Periode mit einem Scrimmage Down beginnt, muss die Game Clock mit dem legalen Snap gestartet werden. Bei allen anderen Scrimmage Downs muss die Game Clock durch ein vorheriges Signal des Referees (Regel 3.3.2.e) oder mit dem legalen Snap gestartet werden (Regel 3.3.2.d). Während eines Try, der Verlängerung einer Spielperiode oder während einer Extraperiode läuft die Game Clock nicht (A.R. 3.3.2.I bis 3.3.2.IV).\n\tc) Nach einer Punkterzielung. Die Game Clock wird durch das Signal eines Schiedsrichters nach einem Touchdown, erfolgreichen Fieldgoal oder Safety angehalten. Sie wird wieder gemäß Regel 3.3.2.a gestartet, außer die Punkte werden wegen einer angenommenen Strafe annulliert oder der Down wird wiederholt, dann startet die Game Clock mit dem legalen Snap.\n\td) Starten mit dem Snap. Für jede der nachfolgend aufgeführten Fälle wird die Game Clock durch das Signal eines Schiedsrichters angehalten. Wenn der nächste Down mit einem Snap beginnt, startet die Game Clock mit dem Snap:\n\t\t1. Touchback;\n\t\t2. nach dem Zwei-Minuten-Timeout in der zweiten oder vierten Spielperiode wird entschieden, dass sich ein Team A-Ballträger, -Fumble oder -Rückpass im Aus befindet (Ausnahme: Nach einem Vorwärtsfumble ins Aus durch Team A startet die Game Clock beim Signal des Referees.);\n\t\t3. Team B wird ein First Down zuerkannt und snappt als nächstes den Ball (A.R. 3.3.2.V);\n\t\t4. es wird entschieden, dass ein Vorwärtspass unvollständig ist;\n\t\t5. einem Team wird ein Timeout, welches ihm angerechnet wird, gewährt;\n\t\t6. der Ball wird illegal;\n\t\t7. eine Spielperiode endet;\n\t\t8. ein legaler Kick-Down endet (A.R. 3.3.2.VI);\n\t\t9. ein Return Kick wird durchgeführt;\n\t\t10. ein illegaler Scrimmage Kick wird durchgeführt;\n\t\t11. Team A verursacht ein Spielverzögerungsfoul, während es sich in einer Scrimmage Kick-Formation befindet;\n\t\t12. ein Zwei-Minuten-Timeout wird erklärt.\n\te) Starten beim Signal des Referees. Für jede der nachfolgend aufgeführten Fälle wird die Game Clock durch das Signal eines Schiedsrichters angehalten. Wenn der nächste Down mit einem Snap beginnt, startet die Game Clock beim Signal des Referees:\n\t\t1. Team A wird entweder durch das Spiel oder eine Strafe ein First Down zuerkannt;\n\t\t2. ein Team A-Fumble geht nach vorne ins Aus;\n\t\t3. außer nach dem Zwei-Minuten-Timeout in der zweiten oder vierten Spielperiode wird entschieden, dass sich ein Team A-Ballträger, -Fumble oder -Rückpass im Aus befindet;\n\t\t4. um eine Strafe zu vervollständigen (Ausnahme: Regel 3.4.4.c);\n\t\t5. ein Verletzungs-Timeout wird für einen oder mehrere Spieler oder einen Schiedsrichter erlaubt (A.R. 3.3.6.I bis 3.3.6.V);\n\t\t6. es wird irrtümlich abgepfiffen;\n\t\t7. es muss für ein mögliches First Down nachgemessen werden;\n\t\t8. beide Teams verursachen eine Verzögerung, die dazu führt, dass der Ball nicht freigegeben werden kann (A.R. 3.3.1.III);\n\t\t9. ein Live Ball kommt in den Besitz eines Schiedsrichters;\n\t\t10. ein Head Coach beantragt eine Head Coach‘s Conference;\n\t\t11. der Referee lässt ein Medien-Timeout zu;\n\t\t12. der Referee nimmt ein Timeout aus eigenem Ermessen;\n\t\t13. der Referee nimmt ein Timeout für unfairen Lärm (Regel 9.2.1.b.5);\n\t\t14. ein illegaler Pass wurde geworfen, um Zeit einzusparen (A.R. 7.3.2.II bis 7.3.2.VII) (Ausnahme: Regel 3.4.4.c);\n\t\t15. der Referee unterbricht den 40/25-Sekunden-Countdown;\n\t\t16. ein Spieler verliert durch die Teilnahme am Down seinen Helm vollständig;\n\t\t17. wenn eines der Teams ein Dead Ball Foul verursacht;\n\t\t18. Violation einer Regel bezüglich vorgeschriebener (Regel 1.4.3 und 1.4.4) oder illegaler Ausrüstung (Regel 1.4.7).\n\tf) Snap überwiegt Signal des Referees. Wenn ein oder mehrere Gründe, die dazu führen, dass die Game Clock mit dem Signal des Referees startet (Regel 3.3.2.e), mit denen in Konflikt stehen, die den Start der Game Clock beim Snap vorschreiben (Regel 3.3.2.c und 3.3.2.d), startet sie mit dem Snap (Ausnahme: Regeln 3.4.4, 3.3.6.f und 3.3.10.b (10-Sekunden-Abzug von der Game Clock) überwiegt diese Regel, außer einem Team wird eines seiner Team-Timeouts gewährt (A.R. 3.3.2.VIII ))."
interpretations: []
