src/snapshots/afrotd__parser__tests__rule_3.3.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 3
title: Spielabbruch
text: "\ta) Der Referee kann das Spiel vorübergehend unterbrechen, wenn das seiner Meinung nach erforderlich ist.\n\tb) Wird das Spiel durch Aktionen einer oder mehrerer Personen, die nicht den Regeln unterliegen, oder aus einem anderen Grund, der nicht von den Regeln erfasst wird, unterbrochen und kann nicht fortgesetzt werden, soll der Referee:\n\t\t1. das Spiel unterbrechen und die Spieler in ihre Teamzonen schicken;\n\t\t2. das Problem mit den Personen beraten, die für die Austragung des Spieles verantwortlich sind;\n\t\t3. das Spiel wieder aufnehmen, wenn er festgestellt hat, dass die Bedingungen für die korrekte Spieldurchführung wieder hergestellt worden sind.\n\tc) Wird ein Spiel gemäß Regel 3.3.3.a und 3.3.3.b vor dem Ende der vierten Periode unterbrochen und kann nicht wieder aufgenommen werden, so gelten die Bestimmungen der BSO Deutschland entsprechend. Die Wertung eines abgebrochenen Spieles wird durch die BSO Deutschland geregelt.\n\td) Endet ein Spiel nach vier Spielperioden unentschieden und wird vor der ordnungsgemäßen Fortsetzung zur Bestimmung eines Meisters einer Liga oder dem Vorankommen eines Teams in einem Turnier gemäß Regel 3.3.3.a und 3.3.3.b unterbrochen und kann nicht sofort wieder aufgenommen werden, so gelten die Bestimmungen der BSO Deutschland entsprechend.\n\te) Wird ein unterbrochenes Spiel wieder aufgenommen, beginnt es mit der gleichen verbleibenden Spielzeit und unter identischen Bedingungen hinsichtlich des Downs, der zu überbrückenden Distanz, der Spielfeldposition, sowie der Berechtigung der Spieler."
interpretations: []
