src/snapshots/afrotd__parser__tests__rule_3.3.4.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 4
title: Gewährte Team-Timeouts
text: "Wurden nicht alle Timeouts eines Teams verbraucht und sind verfügbar, muss ein Schiedsrichter einem Team ein beantragtes Team-Timeout gewähren, wenn es von einem Spieler oder dem Head Coach verlangt wird, während der Ball dead ist. Mehr als ein Timeout vom selben Team wird in einer einzelnen Dead Ball-Periode nicht zugelassen.\n\ta) Jedes Team hat in jeder Halbzeit Anspruch auf drei gewährte TeamTimeouts, wobei pro Team und einzelner Dead-Ball-Periode nicht mehr als ein verfügbares Team-Timeout gewährt wird.\n\tb) Nachdem der Ball für dead erklärt wurde und vor dem nächsten Snap kann ein legaler Ersatzspieler ein Timeout verlangen, wenn er sich zwischen den Neunmetermarkierungen befindet (A.R. 3.3.4.I).\n\tc) Ein Spieler, der an dem vorherigen Down teilgenommen hat, kann in der Zeit, in der der Ball dead ist und vor dem nächsten Snap ein Timeout verlangen, ohne dass er sich zwischen den Neunmetermarkierungen befindet (A.R. 3.3.4.I).\n\td) Ein Head Coach, der sich in oder in der Nähe seiner Teamzone oder Coaching Box befindet, kann in der Zeit, in der der Ball dead ist, und vor dem nächsten Snap ein Timeout verlangen.\n\te) Ein Spieler, ein Ersatzspieler, der das Spielfeld betritt, oder der Head Coach können eine Head Coach’s Conference mit dem Referee verlangen, wenn der Coach glaubt, dass eine Regel falsch ausgelegt wurde oder vom Gegner während eines Downs mehr als die durch die BSO erlaubte Anzahl mit “A” gekennzeichneter Spieler eingesetzt wurden. Wird die Regelauslegung nicht geändert, wird dem Team dieses Coaches ein Timeout abgezogen oder, wenn alle Timeouts verbraucht sind, wird es mit einer Spielverzögerungsstrafe belegt.\n\t\t1. Nur der Referee darf die Game Clock für eine Head Coach’s Conference anhalten.\n\t\t2. Die Head Coach’s Conference muss verlangt werden, bevor der Ball gesnappt oder ein Free Kick durchgeführt wird und vor dem Ende der 2. oder 4. Periode (Regel 5.2.9).\n\t\t3. Nach einer Head Coach’s Conference muss dem Team die volle Zeit des Timeouts gewährt werden, wenn es ihm vom Referee abgezogen wurde."
interpretations: []
