src/snapshots/afrotd__parser__tests__rule_3.3.6.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 6
title: Verletzungs-Timeout
text: "\ta) Im Falle eines oder mehrerer verletzter Spieler:\n\t\t1. Nimmt ein Schiedsrichter ein Verletzungs-Timeout, müssen der oder die Spieler, für die das Timeout genommen wurde, für mindestens einen Down das Feld verlassen, auch dann, wenn sein Team ein eigenes Team-Timeout nimmt. Im Zweifel nehmen die Schiedsrichter ein Timeout für einen verletzten Spieler.\n\t\t2. Der oder die Spieler dürfen nicht eher ins Spiel zurückkehren, bis er oder sie eine Erlaubnis durch das medizinische Personal des entsprechenden Teams erhalten haben.\n\t\t3. Wenn ein Spielteilnehmer (Spieler oder Schiedsrichter) blutet oder seine Uniform mit Blut getränkt ist oder Blut auf unbedeckter Haut sichtbar ist, muss der Spieler oder der Schiedsrichter zur Teamzone gehen, um sich medizinisch versorgen zu lassen. Er darf das Feld ohne Genehmigung des medizinischen Personals nicht wieder betreten (A.R. 3.3.6.I bis 3.3.6.VII).\n\tb) Das Vortäuschen einer Verletzung, egal aus welchem Grund, ist unehrenhaft. Einem verletzten Spieler muss der volle Schutz der Regeln gegeben werden, aber das Vortäuschen einer Verletzung ist unehrlich, unsportlich und widerspricht dem Geist der Regeln. Um einen möglichen Zeitvorteil durch das Vortäuschen einer Verletzung zu vermeiden, wird ausdrücklich auf die Erklärungen des „Football Ehrenkodex, Abschnitt Verhalten der Coaches, Unterpunkt g)“ hingewiesen.\n\tc) Einem Timeout wegen der Verletzung eines oder mehrerer Spieler kann ein Team-Timeout folgen.\n\td) Der Referee kann von sich aus ein Timeout wegen eines verletzten Schiedsrichters nehmen.\n\te) Nach einem Timeout für einen verletzten Team B-Spieler soll eine sichtbare Play Clock auf 40 Sekunden gesetzt werden, außer nach einem Team Timeout oder wenn die Game Clock für das Zwei-Minuten-Timeout angehalten wurde.\n\tf) 10-Sekunden-Abzug von der Game Clock: Wenn nach dem Zwei-Minuten-Timeout die Verletzung eines Spielers der einzige Grund (außer der verletzte Spieler oder ein Mitspieler verliert seinen Helm, Regel 3.3.10) zum Anhalten der Game Clock ist, hat das gegnerische Team die Wahl eines 10-Sekunden-Abzuges von der Game Clock. (Ausnahme: Wenn während eines Plays, bei dem es eine vorübergehende Unterbrechung der Game Clock für einen First Down gibt, eine Verletzung eines Spielers auftritt und die Game Clock mit 10 Sekunden oder weniger in der zweiten oder vierten Spielperiode angehalten wird, hat der Gegner die Möglichkeit eines 10-Sekundenabzuges von der Game Clock. Der 10-Sekundenabzug kann durch die Nutzung eines Team-Timeouts, sofern vorhanden, vermieden werden) (A.R.3.3.6.X und 3.3.6.XIII).\n\t\t1. Die Play Clock wird auf 40 Sekunden für einen verletzten Defense Spieler und auf 25 Sekunden für einen verletzten Offense Spieler (Regel 3.2.4.c.5) gesetzt.\n\t\t2. Wird der 10-Sekunden-Abzug durchgeführt, startet die Game Clock mit dem Signal des Referees. Wird der 10-Sekunden-Abzug nicht durchgeführt, startet die Game Clock mit dem Snap.\n\t\t3. Der 10-Sekunden-Abzug kann vermieden werden, wenn das betreffende Team eines seiner verbleibenden Team-Timeouts verbraucht.\n\t\t4. Es gibt keine Möglichkeit eines 10-Sekunden-Abzugs, wenn Spieler beider Teams verletzt sind (A.R. 3.3.6.VIII und 3.3.6.IX)."
interpretations: []
