src/snapshots/afrotd__parser__tests__rule_3.3.9.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 9
title: Benachrichtigungspflicht des Referees
text: "Während eines vollen Team-Timeouts (Regel 3.3.8.a) muss der Referee beide Teams nach 60 Sekunden informieren, dass das Timeout endet. Fünf Sekunden später soll er den Ball für spielbereit erklären. Während eines 30Sekunden-Timeouts (Regel 3.3.8.b und 3.3.8.c) soll der Referee beide Teams nach 30 Sekunden informieren. Fünf Sekunden später soll er den Ball für spielbereit erklären.\n\ta) Wurde einem Team das dritte Timeout in einer Halbzeit angerechnet, muss der Referee den Team Captains auf dem Feld und den Head Coach dieses Teams dahingehend informieren.\n\tb) Ist die sichtbare Game Clock nicht die offizielle Zeitnahmevorrichtung, muss der Referee oder sein Stellvertreter nach dem Zwei-Minuten-Timeout in der zweiten und vierten Spielperiode jeden Team Captain auf dem Feld und jeden Head Coach über die verbleibende Spielzeit informieren, wenn die Game Clock den Regeln gemäß angehalten wurde. Ein Vertreter jedes Teams darf die Teamzone entlang der Begrenzungslinien verlassen, um zu diesem Zweck die Zeitansagen entgegenzunehmen."
interpretations: []
