src/snapshots/afrotd__parser__tests__rule_3.4.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 3
  - 4
  - 1
title: Startverzögerung einer Halbzeit
text: "\ta) Jedes Team muss seine Spieler zum festgesetzten Zeitpunkt auf dem Feld haben, um das Spiel eröffnen zu können und eine Halbzeit zu beginnen. Wenn beide Teams es ablehnen, zu Beginn einer Halbzeit als erste den Platz zu betreten, muss das Heimteam als erstes das Feld betreten. Strafe: 15 Meter vom Succeeding Spot [S21].\n\tb) Das Heimteam-Management ist für die Räumung des Spielfeldes und der Endzonen zu Beginn jeder Halbzeit verantwortlich, damit das Spiel zur vorgesehenen Zeit beginnen kann. Präsentationen oder andere Aktivitäten unterliegen der Aufsicht des Heimteam-Managements, und ein pünktlicher Start jeder Halbzeit ist vorgeschrieben. Strafe: 10 Meter vom Succeeding Spot [S21]. (Ausnahme: Der Referee kann von der Strafe absehen, wenn die Umstände, die zur Verzögerung führen, außerhalb der Kontrollmöglichkeit des Heimteam-Managements liegen.)"
interpretations: []
